# DL_hackaton

./: .gitignore  README.md  evaluation.cmd  finetuning.cmd  main.py  model_paths_A.txt  model_paths_B.txt  model_paths_C.txt  model_paths_D.txt  pretraining.cmd  pyproject.toml  requirements.txt  resume_all_trainings.cmd
083/: model_paths_A.txt  model_paths_B.txt  model_paths_C.txt
OLD/: model_paths_A.txt  model_paths_ABCD.txt  model_paths_B.txt
checkpoints/: model_A_cycle_1_epoch_0_loss_1.233_f1_0.671.pth  model_A_cycle_1_epoch_0_loss_6.868_f1_0.752.pth  model_A_cycle_1_epoch_1_loss_1.258_f1_0.674.pth  model_A_cycle_1_epoch_5_loss_6.759_f1_0.757.pth  model_A_cycle_2_epoch_0_loss_1.260_f1_0.679.pth  model_A_cycle_2_epoch_0_loss_5.948_f1_0.718.pth  model_A_cycle_2_epoch_0_loss_7.016_f1_0.729.pth  model_A_cycle_2_epoch_13_loss_0.930_f1_0.735.pth  model_A_cycle_2_epoch_3_loss_6.971_f1_0.730.pth  model_A_cycle_3_epoch_0_loss_1.191_f1_0.692.pth  model_A_cycle_3_epoch_0_loss_6.180_f1_0.712.pth  model_A_cycle_3_epoch_0_loss_7.339_f1_0.731.pth  model_A_cycle_3_epoch_4_loss_7.272_f1_0.732.pth  model_A_cycle_4_epoch_0_loss_0.914_f1_0.738.pth  model_A_cycle_4_epoch_0_loss_7.007_f1_0.733.pth  model_A_cycle_4_epoch_1_loss_6.991_f1_0.738.pth  model_A_cycle_5_epoch_0_loss_0.943_f1_0.725.pth  model_A_cycle_5_epoch_0_loss_5.836_f1_0.730.pth  model_A_cycle_5_epoch_0_loss_6.818_f1_0.745.pth  model_A_cycle_5_epoch_11_loss_6.803_f1_0.746.pth  model_A_cycle_5_epoch_13_loss_6.712_f1_0.747.pth  model_A_cycle_5_epoch_19_loss_6.618_f1_0.748.pth  model_A_cycle_5_epoch_5_loss_0.909_f1_0.752.pth  (+79 more)
(+61 files in other folders)
